[package]
name = "blitz"
version = "0.1.0"
edition = "2024"
license = "MIT"
description = "Lightweight HTTP proxy for chatjimmy.ai with OpenAI-compatible API"
readme = "README.md"
repository = "https://github.com/yourusername/blitz"

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
anyhow = "1"
actix-web = "4"
actix-cors = "0.7"
tokio = { version = "1.49.0", features = ["full", "signal"] }
reqwest = { version = "0.13.2", features = ["json", "rustls"] }
futures = "0.3"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
uuid = { version = "1", features = ["v7", "serde"] }
num_cpus = "1.16"
